// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewContainer render renders spinner when stores not ready 1`] = `
<StyledCustomizedSpinner
  className="details-view-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`DetailsViewContainer renderContent renders TargetPageClosedView when target page closed 1`] = `
"<div className=\\"table column-layout main-wrapper\\">
  <Header deps={{...}} selectedPivot={{...}} featureFlagStoreData={{...}} dropdownClickHandler={[undefined]} tabClosed={true} />
  <div className=\\"table column-layout details-view-body\\">
    <div className=\\"table row-layout details-view-main-content\\">
      <div className=\\"details-content table column-layout\\">
        <div className=\\"view\\" role=\\"main\\">
          <TargetPageClosedView />
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DetailsViewContainer renderContent shows target tab was closed when stores are not loaded 1`] = `
"<div className=\\"table column-layout main-wrapper\\">
  <Header deps={{...}} selectedPivot={0} featureFlagStoreData={{...}} dropdownClickHandler={[undefined]} tabClosed={true} />
  <div className=\\"table column-layout details-view-body\\">
    <div className=\\"table row-layout details-view-main-content\\">
      <div className=\\"details-content table column-layout\\">
        <div className=\\"view\\" role=\\"main\\">
          <TargetPageClosedView />
        </div>
      </div>
    </div>
  </div>
</div>"
`;
